force-app/main/default/objects/CLM_LocationOfLossJunction__c/CLM_LocationOfLossJunction__c.object-meta.xml
<CustomObject>
    <description>Child Claim - Location of Loss Junction</description>
    <label>Claim and Location of Loss</label>
    <nameField>
        <displayFormat>C&amp;L-{0000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim and Location of Loss</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>