force-app/main/default/objects/CLM_LocationOfLossJunction__c/fields/Claim_md__c.field-meta.xml
<CustomField>
    <fullName>Claim_md__c</fullName>
    <label>Claim</label>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>Claim and Location of Loss</relationshipLabel>
    <relationshipName>ClaimLocationOfLossJunctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>