force-app/main/default/objects/CLM_LocationOfLossJunction__c/fields/LocationOfLoss_lk__c.field-meta.xml
<CustomField>
    <fullName>LocationOfLoss_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location of Loss</label>
    <referenceTo>CLM_LocationOfLoss__c</referenceTo>
    <relationshipLabel>Claim and Location of Loss</relationshipLabel>
    <relationshipName>ClaimLocationOfLossJunctions</relationshipName>
    <type>Lookup</type>
</CustomField>