force-app/main/default/objects/CLM_LocationOfLossJunction__c/fields/LocationofLossAdd_fm__c.field-meta.xml
<CustomField>
    <fullName>LocationofLossAdd_fm__c</fullName>
    <formula>LocationOfLoss_lk__r.LocationOfLoss__Street__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location of Loss_Address</label>
    <type>Text</type>
</CustomField>